Fix some minor typos related to the WebProcessCreationParameter. https://bugs.webkit.org/show_bug.cgi?id=143598

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-04-10
Reviewed by Csaba Osztrogonác.

No new tests, no behavior change.

* Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode):
(WebKit::WebProcessCreationParameters::decode):
* Shared/WebProcessCreationParameters.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createNewWebProcess):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):

Canonical link: https://commits.webkit.org/161624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182626 268f45cc-cd09-0410-ab3c-d52691b4dbfc